# everplan.ai-vmm

./: .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  BMG_GPU_INVESTIGATION.md  CMakeLists.txt  CONTAINERIZED_BACKEND_STRATEGY.md  CONTAINERIZED_CPU_BACKEND_PLAN.md  DEVELOPMENT.md  Dockerfile.core  FOUNDATION_SUMMARY.md  HARDWARE_DISCOVERY_STATUS.md  LLM_INTEGRATION_SUCCESS.md  PROJECT_STRUCTURE.md  README.md  ai-vmm.md  docker-compose.yml  fix_web_interface.py  run_benchmark.sh  start-containerized.sh  test_bmg_gpu.py  test_ipex_llm.py  test_pytorch_xpu.py
docker/cpu-backend/: Dockerfile  llm_server.py
docs/: GPU_STATUS.md  LLM_IMPLEMENTATION_ROADMAP.md  MULTI_BACKEND_LLM.md
examples/: CMakeLists.txt
examples/basic_usage/: CMakeLists.txt  main.cpp
examples/images/: .gitkeep  README.md
examples/performance_comparison/: CMakeLists.txt  main.cpp
include/ai_vmm/: ai_vmm.hpp  compute_backend.hpp  hardware_discovery.hpp  precision.hpp  types.hpp  vmm.hpp
include/ai_vmm/backends/: backend_manager.hpp  compute_backend.hpp  intel_backend.hpp  nvidia_backend.hpp
models/: README.md  model_info.json  tokenizer_config.json
models/tinyllama_openvino/: config.json  download_and_convert.py
python/ai_vmm/: __init__.py
scripts/: benchmark_llm.sh  build.sh  download_models.py  validate.sh
src/backends/: CMakeLists.txt  backend_manager.cpp  compute_backend.cpp  intel_backend.cpp  llm_inference.py  llm_inference_simple.py  llm_openvino.py  nvidia_backend.cpp  onnx_inference.py  resnet50_inference.py  yolov8_inference.py  yolov8_server.py
src/core/: CMakeLists.txt  hardware_discovery.cpp  model.cpp  tensor.cpp.backup  vmm.cpp
src/hal/: CMakeLists.txt  backend_registry.cpp
src/memory/: CMakeLists.txt  memory_manager.cpp
src/optimization/: CMakeLists.txt  model_optimizer.cpp
src/scheduling/: CMakeLists.txt  workload_scheduler.cpp
tests/: CMakeLists.txt  test_hardware_discovery.cpp  test_main.cpp  test_tensor.cpp  test_vmm_basic.cpp
web/: README.md  STATUS.md  requirements.txt  start.sh  vmm_api.py
web/static/: index.html
